# data_engineering_realtime_pipelin

./: .env.dev  .gitignore  DOCKER_GUIDE.md  README.md  airflow_orchestrator.ipynb  docker-compose.yml  learning_links.txt  mta_gtfs_realtime_prediction.ipynb  pyproject.toml  tasks.py  test-db-connection.yml
.cursor/: mcp.json
.github/workflows/: ci.yml
airflow_home/: airflow.cfg  simple_auth_manager_passwords.json.generated
data_engineering_realtime_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: stream_gtfs.py
src/cloud/aws/: lambda_function.py.tmpl  main.tf  variables.tf
src/data_engineering_realtime_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/infrastructure/docker/: airflow.Dockerfile  init-db.sql
src/ingestion/: __init__.py  fetch_gtfs.py  fetch_nba.py  fetch_weather.py
src/orchestrators/airflow/: README.md  simple_auth_manager_passwords.json.generated
src/orchestrators/airflow/dags/: gtfs_data_pipeline.py  nba_ingest_pipeline.py  weather_kafka_pipeline.py
src/orchestrators/airflow/tests/: test_dag_integrity.py
src/orchestrators/archive/airflow/config/: airflow.cfg
src/orchestrators/archive/airflow/dags/: user_metrics_etl.py
src/orchestrators/dbt/: dbt_project.yml  profiles.yml
src/orchestrators/dbt/models/: schema.yml
src/orchestrators/dbt/models/gtfs/: daily_vehicle_counts.sql  schema.yml
src/orchestrators/dbt/models/nba/: nba_games_summary.sql
src/orchestrators/dbt/models/weather/: weather_daily_summary.sql
src/orchestrators/kestra/flows/: nba_data_ingest.yml  weather_data_pipeline.yml
src/orchestrators/learning-airflow/: AIRFLOW3_MIGRATION.md  README.md  requirements.txt
src/orchestrators/learning-airflow/dags/: example_etl_galaxies.py  gtfs_data_pipeline.py  nba_ingest_pipeline.py  user_metrics_etl.py  weather_kafka_pipeline.py
src/orchestrators/learning-airflow/include/: astronomy.db
src/orchestrators/learning-airflow/include/custom_functions/: gtfs_functions.py  nba_functions.py  user_metrics_functions.py  weather_functions.py
src/real_time_pipeline/: __init__.py  config.py  gtfs.py  main.py  producer.py
terraform/: main.tf  variables.tf
tests/: .pre-commit-config.yaml  airflow-init.sh  test-airflow.yml  test_pipeline.sh
